fix java 8 compile issues